; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_s3c-hsotg.c_s3c_hsotg_complete_request_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_s3c-hsotg.c_s3c_hsotg_complete_request_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c_hsotg = type { i32 }
%struct.s3c_hsotg_ep = type { i32 }
%struct.s3c_hsotg_req = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s3c_hsotg*, %struct.s3c_hsotg_ep*, %struct.s3c_hsotg_req*, i32)* @s3c_hsotg_complete_request_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s3c_hsotg_complete_request_lock(%struct.s3c_hsotg* %0, %struct.s3c_hsotg_ep* %1, %struct.s3c_hsotg_req* %2, i32 %3) #0 {
  %5 = alloca %struct.s3c_hsotg*, align 8
  %6 = alloca %struct.s3c_hsotg_ep*, align 8
  %7 = alloca %struct.s3c_hsotg_req*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.s3c_hsotg* %0, %struct.s3c_hsotg** %5, align 8
  store %struct.s3c_hsotg_ep* %1, %struct.s3c_hsotg_ep** %6, align 8
  store %struct.s3c_hsotg_req* %2, %struct.s3c_hsotg_req** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.s3c_hsotg_ep*, %struct.s3c_hsotg_ep** %6, align 8
  %11 = getelementptr inbounds %struct.s3c_hsotg_ep, %struct.s3c_hsotg_ep* %10, i32 0, i32 0
  %12 = load i64, i64* %9, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load %struct.s3c_hsotg*, %struct.s3c_hsotg** %5, align 8
  %15 = load %struct.s3c_hsotg_ep*, %struct.s3c_hsotg_ep** %6, align 8
  %16 = load %struct.s3c_hsotg_req*, %struct.s3c_hsotg_req** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @s3c_hsotg_complete_request(%struct.s3c_hsotg* %14, %struct.s3c_hsotg_ep* %15, %struct.s3c_hsotg_req* %16, i32 %17)
  %19 = load %struct.s3c_hsotg_ep*, %struct.s3c_hsotg_ep** %6, align 8
  %20 = getelementptr inbounds %struct.s3c_hsotg_ep, %struct.s3c_hsotg_ep* %19, i32 0, i32 0
  %21 = load i64, i64* %9, align 8
  %22 = call i32 @spin_unlock_irqrestore(i32* %20, i64 %21)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @s3c_hsotg_complete_request(%struct.s3c_hsotg*, %struct.s3c_hsotg_ep*, %struct.s3c_hsotg_req*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
